README, doc and mobyle page updated + minor bug
* mapping now import os to properly handle environment variables

 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	deleted:    README
	new file:   README.md
	deleted:    TODO
	new file:   doc/imogene-mob.pdf
	new file:   doc/imogene-mob.png
	modified:   doc/imogene.texi
	modified:   doc/install.texi
	new file:   doc/mobyle.texi
	modified:   mobyle/Makefile.am
	modified:   mobyle/imogene.xml.in
	modified:   scripts/python/mapping.py.in
	deleted:    typescript

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -77,6 +77,7 @@ This manual is for Imogene
 * genmot:: 
 * display:: 
 * test::
+* mobyle::
 * copying::
 * Index::
 @end menu
@@ -94,7 +95,7 @@ This manual is for Imogene
 
 @include test.texi
 
-@c @include scangen.texi
+@include mobyle.texi
 
 @c @include help.texi
 
