display scangen results as an html page

--- a/doc/display.texi
+++ b/doc/display.texi
@@ -17,7 +17,7 @@
 @c You should have received a copy of the GNU General Public License
 @c along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
-@node display
+@node Display
 @chapter Displays motifs on sequences
 
 @cindex display, motifs, sequences
