--- a/doc/extract.texi
+++ b/doc/extract.texi
@@ -17,7 +17,7 @@
 @c You should have received a copy of the GNU General Public License
 @c along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
-@node extract
+@node Extract
 @chapter Extract an alignment from a coordinate file
 
 @cindex extract, alignment
