--- a/doc/mobyle.texi
+++ b/doc/mobyle.texi
@@ -17,7 +17,7 @@
 @c You should have received a copy of the GNU General Public License
 @c along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
-@node mobyle
+@node Mobyle
 @chapter Mobyle interface
 
 @cindex mobyle, interface
