--- a/doc/test.texi
+++ b/doc/test.texi
@@ -17,7 +17,7 @@
 @c You should have received a copy of the GNU General Public License
 @c along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
 
-@node test
+@node Test
 @chapter Running test files
 
 @cindex test, example
