--- a/doc/distinfo.texi
+++ b/doc/distinfo.texi
@@ -37,12 +37,23 @@ This is the output of @code{imogene distinfo --help}:
 You mainly need to provide two PWMs in the format produced with the genmot mode:
 
 @smallexample
-AATGGAAATT	-47.211	299.182	14	12	0.00168	9.16e-05	0.388,-0.302,-3.55,-3.66,-3.66,1.15,1.19,1.19,-0.528,-3.59,	0.0655,-0.037,-3.55,-3.66,-3.66,-3.66,-3.66,-3.66,-1.15,-1.32,	-3.49,-3.56,0.624,1.59,1.59,-1.53,-3.66,-3.66,-3.53,-1.32,	0.119,0.659,0.714,-3.66,-3.66,-3.66,-3.66,-3.66,0.921,1.08,	8485,1251,217,41,6,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	
-TTTGGTTTTG	-45.567	6391.4	14	13	0.00182	0.000143	-3.86,-3.82,-2.5,-0.505,-2.33,-3.87,-3.86,-1.68,-3.74,-3.72,	-3.86,-3.82,-3.74,-3.63,-3.74,-2.32,-3.86,-2.14,0.965,1.1,	-3.86,-2.15,1.02,1.36,1.54,-3.87,-3.86,-2.04,-3.74,-0.282,	1.19,1.17,0.333,-2.18,-2.23,1.17,1.19,1.09,0.434,-0.215,	7831,1633,415,91,21,5,3,1,0,0,0,0,0,0,0,0,0,0,0,0	
+AATGGAAATT	-47.211	299.182	14	12	0.00168	9.16e-05\
+0.388,-0.302,-3.55,-3.66,-3.66,1.15,1.19,1.19,-0.528,-3.59,\
+0.0655,-0.037,-3.55,-3.66,-3.66,-3.66,-3.66,-3.66,-1.15,-1.32,\
+-3.49,-3.56,0.624,1.59,1.59,-1.53,-3.66,-3.66,-3.53,-1.32,\
+0.119,0.659,0.714,-3.66,-3.66,-3.66,-3.66,-3.66,0.921,1.08,\
+8485,1251,217,41,6,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	
+TTTGGTTTTG	-45.567	6391.4	14	13	0.00182	0.000143\
+-3.86,-3.82,-2.5,-0.505,-2.33,-3.87,-3.86,-1.68,-3.74,-3.72,\
+-3.86,-3.82,-3.74,-3.63,-3.74,-2.32,-3.86,-2.14,0.965,1.1,\
+-3.86,-2.15,1.02,1.36,1.54,-3.87,-3.86,-2.04,-3.74,-0.282,\
+1.19,1.17,0.333,-2.18,-2.23,1.17,1.19,1.09,0.434,-0.215,\
+7831,1633,415,91,21,5,3,1,0,0,0,0,0,0,0,0,0,0,0,0	
 @end smallexample
 
-You can find example files in the folder @file{example} of the tarball. You can then try:
+You can find example files in the folder @file{examples/pwms} of the tarball.
+You can then try:
 @smallexample
-imogene distinfo --input example/PWM1.dat example/PWM2.dat
+imogene distinfo --motifs=pwms.dat --species=droso --displaydist
 @end smallexample
 
